--- a/src/common/uiDialog/confirm.tpl.html
+++ b/src/common/uiDialog/confirm.tpl.html
@@ -5,7 +5,7 @@
   <p>{{data.message || "Are you sure?"}}</b>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-warning" ng-click="$dismiss()">Avbryt</button>
+  <button class="btn btn-warning" ng-click="$dismiss()">Nej jag ångrar mig</button>
   <button class="btn btn-primary" ng-click="$close()">OK</button>
 </div>
 
