--- a/src/common/uiProfile/uiProfile.tpl.html
+++ b/src/common/uiProfile/uiProfile.tpl.html
@@ -1,5 +1,5 @@
 <div class="sp_login">
-  <span class="sp_user" ng-show="isAuthenticated()"><i class="icon-user"></i> {{user.username}}&nbsp;&nbsp;&nbsp;<i class="icon-home"></i> {{user.organisation.name}}</span>
+  <span class="sp_user" ng-show="isAuthenticated()"><i class="glyphicon glyphicon-user"></i> {{user.username}}&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-home"></i> {{user.organisation.name}}</span>
   <a ng-show="isAuthenticated()" ng-click="logout()" class="logout">Logga ut</a>
   <a ng-hide="isAuthenticated()" ng-click="login()" class="login">Logga in</a>
 </div>
