Updated to angular 1.4.1

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="sp.editor" ng-controller="AppCtrl">
   <head>
+    <base href="/">
     <title>Storypalette Editor</title>
     <meta charset="utf-8">
 
