added import statements

--- a/server/index.html
+++ b/server/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="sp.editor" ng-controller="AppCtrl">
   <head>
-    <title>Storypalette Touch Performer</title>
+    <title>Storypalette Editor</title>
     <meta charset="utf-8">
 
     <!-- socket.io client js is served by storypalette-server -->
