fixed asset paths

--- a/src/edit/edit.tpl.html
+++ b/src/edit/edit.tpl.html
@@ -1,4 +1,4 @@
-<header class="sp_fixedheader" ng-include="'/app/header/header.tpl.html'"></header>
+<header class="sp_fixedheader" ng-include="'/header/header.tpl.html'"></header>
 
 <div class="sp_fixbody">
   <div ng-include="'notifications.tpl.html'" class="container" ng-show="notifications.getCurrent().length">
